# Motion-Signal-Feedback-Engine

./: .gitignore  CMakeLists.txt  README.md  bullshit tracker.txt  configure.bat  design principles.txt
AppDepre/: CMakeLists.txt
AppDepre/source/: SerialPortHandler.cpp
Components/: CMakeLists.txt
Components/AudioTestComponent/: AudioTestComponent.cpp  AudioTestComponent.h  CMakeLists.txt
Components/Cycloid/: BarDisplay.h  BeatDisplay.h  CMakeLists.txt  Comet.h  Cycloid.h  DynamicCycloid.h  FrequencyDisplay.h  RatioDisplay.h  StaticCycloid.h  utils.h
Components/GraphVector/: CMakeLists.txt  GraphVector.cpp  GraphVector.h
Components/Grapher/: CMakeLists.txt  Grapher.cpp  Grapher.h
Components/TestComponent/: CMakeLists.txt  TestComponent.cpp  TestComponent.h
Components/librarylib/: CMakeLists.txt  librarylib.h
EntryPoints/App/: CMakeLists.txt  main.cpp
EntryPoints/UnitTests/: CMakeLists.txt  main.cpp
Libraries/: CMakeLists.txt
Libraries/Amplitude/: Amplitude.cpp
Libraries/Cycle/: Cycle.cpp  Cycle.h
Libraries/HumanWare/: CMakeLists.txt  HumanWare.h  HumanWareTests.h  SensorWare.h
Libraries/Oscillator/: Oscillator.h
Libraries/OscillatorWrapper/: OscillatorWrapper.cpp  OscillatorWrapper.h
Libraries/SerialMonitor/: SerialMonitor.cpp  SerialMonitor.h
Libraries/SerialSimulator/: CMakeLists.txt  SerialSimulator.cpp  SerialSimulator.h
Libraries/Transport/: CMakeLists.txt  Transport.cpp  Transport.h
PureTest/: CMakeLists.txt  main.cpp
Resources/: Bullshit Tracker.txt  Design Principles.txt  platformio_main.cpp
Resources/nativeSerialReader/: CMakeLists.txt  serial.cpp  serial.h
TestApp/: CMakeLists.txt
TopComponents/: CMakeLists.txt
TopComponents/AudioTester/: AudioTester.cpp  AudioTester.h  CMakeLists.txt
TopComponents/GraphicsTester/: CMakeLists.txt  GraphicsTester.cpp  GraphicsTester.h
TopComponents/MainComponent/: CMakeLists.txt  MainComponent.cpp  MainComponent.h
app/: CMakeLists.txt  Main.cpp  main.cpp
app/include/: MainComponent.h  SerialPortHandler.h
app/source/: Main.cpp  MainComponent.cpp  SerialPortHandler.cpp
cmake/: JuceSettings.cmake  cpm.cmake
cmake_utils/: CMakeLists.txt
components/: CMakeLists.txt
components/MainComponent/: CMakeLists.txt  MainComponent.cpp  MainComponent.h
libs/: CMakeLists.txt
libs/grapher/: CMakeLists.txt  grapher.h
libs/serialMonitor/: CMakeLists.txt  SerialPortHandler.h
plugin/: CMakeLists.txt
plugin/include/YourPluginName/: MainComponent.h  PluginEditor.h  PluginProcessor.h  SerialPortHandler.h
plugin/source/: Main.cpp  MainComponent.cpp  PluginEditor.cpp  PluginProcessor.cpp  SerialPortHandler.cpp  funcs.txt
